--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "cross-env": "^5.0.0",
+    "element-ui": "^1.4.4",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -25,9 +26,9 @@
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
     "vue": "^2.4.2",
-    "vuetify": "^0.15.7",
     "vue-router": "^2.5.3",
     "vue-server-renderer": "^2.4.2",
+    "vuetify": "^0.15.7",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2"
   },
