--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "element-ui": "^1.4.4",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "express-session": "^1.15.5",
+    "express-socket.io-session": "^1.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "lru-cache": "^4.0.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
+    "socket.io": "^2.0.3",
     "vue": "^2.4.2",
     "vue-router": "^2.5.3",
     "vue-server-renderer": "^2.4.2",
