--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-socket.io-session": "^1.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "lru-cache": "^4.0.2",
+    "raven": "^2.1.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
     "socket.io": "^2.0.3",
