--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "element-ui": "^1.4.4",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "express-graphql": "^0.6.11",
     "express-session": "^1.15.5",
     "express-socket.io-session": "^1.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "graphql": "^0.11.3",
     "lru-cache": "^4.0.2",
     "raven": "^2.1.2",
     "serialize-javascript": "^1.3.0",
