--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "chai": "^4.1.2",
     "compression": "^1.6.2",
     "cross-env": "^5.0.0",
     "element-ui": "^1.4.4",
@@ -27,6 +28,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "graphql": "^0.11.3",
     "lru-cache": "^4.0.2",
+    "mocha": "^3.5.3",
     "raven": "^2.1.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
