--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Daksh Miglani <hello@dak.sh>",
   "version": "0.0.1",
   "scripts": {
+    "test": "mocha tests/**/**.test.js",
     "dev": "node server",
     "start": "NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
@@ -16,7 +17,6 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "chai": "^4.1.2",
     "compression": "^1.6.2",
     "cross-env": "^5.0.0",
     "element-ui": "^1.4.4",
@@ -27,8 +27,8 @@
     "express-socket.io-session": "^1.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "graphql": "^0.11.3",
+    "jasmine": "^2.8.0",
     "lru-cache": "^4.0.2",
-    "mocha": "^3.5.3",
     "raven": "^2.1.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
