--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "chai": "^4.1.2",
     "compression": "^1.6.2",
     "cross-env": "^5.0.0",
     "element-ui": "^1.4.4",
@@ -27,8 +28,8 @@
     "express-socket.io-session": "^1.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "graphql": "^0.11.3",
-    "jasmine": "^2.8.0",
     "lru-cache": "^4.0.2",
+    "mocha": "^3.5.3",
     "raven": "^2.1.2",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.22.0",
